crates/cargo-tsuno/tests/fixtures/verify_cli/fail/rejects_open_mutable_reference_on_storage_dead.rs
fn opaque(_: &mut i32) {}

#[tsuno::verify]
fn bad_scope(mut x: i32) {
    {
        let r = &mut x;
        opaque(r);
    }
}

fn main() {}
